# cmtr

./: AGENTS.md  README.md  mise.toml  pyproject.toml
.github/workflows/: publish.yml
scripts/: codex_auth_probe.py
src/cmtr/: __init__.py  cli.py  codex_client.py  config.py  core.py  errors.py  git.py  hook.py  openai_client.py  prompt.py  ui.py
tests/: test_git_hooks.py
