[project]
name = "cmtr"
version = "0.2.6"
description = "AI-powered git commit message generator"
readme = "README.md"
authors = [
    { name = "Shayne Sweeney", email = "79330+shayne@users.noreply.github.com" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
keywords = ["git", "commit", "cli", "openai", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control",
    "Topic :: Utilities",
]
dependencies = [
    "openai>=2.14.0",
    "rich>=14.2.0",
    "typer>=0.21.0",
]

[dependency-groups]
dev = [
    "ty>=0.0.7",
]

[project.scripts]
cmtr = "cmtr:main"

[project.urls]
Homepage = "https://github.com/shayne/cmtr"
Repository = "https://github.com/shayne/cmtr"
Issues = "https://github.com/shayne/cmtr/issues"

[tool.ty.src]
include = ["src"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
